perf(core): will ignore chore-release in changelog
GH-88

--- a/mymarkdown.ejs
+++ b/mymarkdown.ejs
@@ -1,7 +1,7 @@
 ## Release [<%= range.split('..')[1] %>](https://github.com/yeshamavani/release-auti2/compare/<%= range %>) <%= new Date().toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short", day:"numeric"})
 ;%>
 <% commits.forEach(function (commit) { %>
-  <% if(commit.authorName !== 'semantic-release-bot'){ %>
+    <% if(commit.title.indexOf('chore(release)') !== 0){ %>
   * __<%= commit.title %>__
       [<%= commit.authorName %>](mailto:<%= commit.authorEmail %>) committed [the following changes](https://github.com/yeshamavani/release-auti2/commit/<%= commit.sha1%>) on <%= commit.committerDate %>
 
