--- a/mymarkdown.ejs
+++ b/mymarkdown.ejs
@@ -1,13 +1,6 @@
 ## Release [<%= range.split('..')[1] %>](https://github.com/yeshamavani/release-auti2/compare/<%= range %>) <%= new Date().toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short", day:"numeric"})
 ;%>
 <% commits.forEach(function (commit) { %>
-    <% if(commit.title.indexOf('chore(release)') !== 0){ %>
-  * __<%= commit.title %>__
-      [<%= commit.authorName %>](mailto:<%= commit.authorEmail %>) committed [the following changes](https://github.com/yeshamavani/release-auti2/commit/<%= commit.sha1%>) on <%= commit.committerDate %>
-
-      <%= commit.messageLines.join("\n    ") %>
-      issue number = <%= commit.messageLines[commit.messageLines.findIndex(ele => ele.includes('GH-'))] %>
-      issue
-      <% } -%>
+  - [<%= commit.issueTitle %>](https://github.com/yeshamavani/release-auti2/issues/<%= commit.issueno %>) :- [<%= commit.title %>](https://github.com/yeshamavani/release-auti2/commit/<%= commit.sha1%>) was commited on <%= commit.committerDate %> by [<%= commit.authorName %>](mailto:<%= commit.authorEmail %>)
   <% }) %>
   ___
