fix(component): add description is chnagelog
added messgaes as a part of description

GH-19

--- a/mymarkdown.ejs
+++ b/mymarkdown.ejs
@@ -2,5 +2,6 @@
 ;%>
 <% commits.forEach(function (commit) { %>
   - [<%= commit.issueTitle %>](https://github.com/yeshamavani/release-auti2/issues/<%= commit.issueno %>) :- [<%= commit.title %>](https://github.com/yeshamavani/release-auti2/commit/<%= commit.sha1%>) was commited on <%= commit.committerDate %> by [<%= commit.authorName %>](mailto:<%= commit.authorEmail %>)
+    - <%= commit.messageLines[0] -%>
   <% }) %>
   ___
